--- a/.env
+++ b/.env
@@ -6,5 +6,6 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mysql://root:123@127.0.0.1:3306/db_airbnb?schema=public"
+# DATABASE_URL="mysql://root:1234@airbnb_db:3306/db_airbnb?schema=public"
 
 SECRET_KEY = ipLKWFCrsh
