--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,14 +7,14 @@ services:
     ports:
       - 8080:8080
     depends_on:
-      - mysql_db
+      - airbnb_db
     env_file: .env
     networks:
       - node-network
 
-  mysql_db:
+  airbnb_db:
     image: mysql
-    container_name: mysql_db
+    container_name: airbnb_db
     ports:
       - 3306:3306
     environment:
@@ -23,12 +23,12 @@ services:
     env_file:
       - .env
     volumes:
-      - mysql_db:/var/lib/mysql
+      - airbnb_db:/var/lib/mysql
     networks:
       - node-network
 
 volumes:
-  mysql_db:
+  airbnb_db:
     driver: local
 networks:
   node-network:
