--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://root:123@127.0.0.1:3306/db_airbnb?schema=public"
-# DATABASE_URL="mysql://root:1234@airbnb_db:3306/db_airbnb?schema=public"
+# DATABASE_URL="mysql://root:123@127.0.0.1:3306/db_airbnb?schema=public"
+DATABASE_URL="mysql://root:1234@airbnb_db:3306/db_airbnb?schema=public"
 
 SECRET_KEY = ipLKWFCrsh
